--- a/relatorio-latex/capitulos/05_vulnerabilidades_testadas_nao_detetadas.tex
+++ b/relatorio-latex/capitulos/05_vulnerabilidades_testadas_nao_detetadas.tex
@@ -14,7 +14,7 @@ O \textit{Cross-Origin Resource Sharing} (CORS) é um mecanismo de segurança im
 
 Sem CORS, o \textit{Same-Origin Policy} (SOP) impede que \textit{scripts} executados numa origem (e.g., \url{https://app.example.com}) acedam a recursos noutra (e.g., \url{https://api.example.org}).
 
-Uma configuração incorreta de CORS pode permitir que um domínio malicioso obtenha dados sensíveis através de pedidos legítimos, violando a confidencialidade da aplicação \cite{ref6}. Exemplos comuns incluem:
+Uma configuração incorreta de CORS pode permitir que um domínio malicioso obtenha dados sensíveis através de pedidos legítimos, violando a confidencialidade da aplicação. Exemplos comuns incluem:
 \begin{itemize}
 
 \item Cabeçalhos permissivos, como Access-Control-Allow-Origin: *;
