--- a/relatorio-latex/capitulos/05_vulnerabilidades_testadas_nao_detetadas.tex
+++ b/relatorio-latex/capitulos/05_vulnerabilidades_testadas_nao_detetadas.tex
@@ -1,8 +1,8 @@
 \section{Vulnerabilidades Testadas mas Não Detetadas}
 
-Durante a análise de segurança à aplicação alojada na plataforma Base44, foram também considerados outros vetores de ataque comuns em aplicações web modernas, com o objetivo de realizar uma avaliação mais abrangente e alinhada com as boas práticas internacionais de segurança \cite{ref1}, \cite{ref2}.
+Durante a análise de segurança à aplicação alojada na plataforma Base44, foram também considerados outros vetores de ataque comuns em aplicações web modernas, com o objetivo de realizar uma avaliação mais abrangente e alinhada com as boas práticas internacionais de segurança \cite{ref1, ref2}.
 
-Ainda que não tenham sido identificadas ocorrências dessas vulnerabilidades no projeto em análise, a sua inclusão demonstra uma abordagem metodológica informada e coerente com os princípios do OWASP e das normas NIST \cite{ref3}, \cite{ref4}.
+Ainda que não tenham sido identificadas ocorrências dessas vulnerabilidades no projeto em análise, a sua inclusão demonstra uma abordagem metodológica informada e coerente com os princípios do OWASP e das normas NIST \cite{ref3, ref4}.
 
 Segue-se o resumo das vulnerabilidades analisadas, precedido por uma breve descrição teórica de cada uma.
 
@@ -115,10 +115,10 @@ Durante a análise estática do código-fonte (HTML, JavaScript e cabeçalhos HT
 
 Foram efetuadas pesquisas manuais e automatizadas, incluindo inspeção de ficheiros minificados.
 
-Não foram identificados valores sensíveis embutidos no código, o que demonstra uma boa segregação de segredos e práticas seguras de gestão de credenciais \cite{ref14}, \cite{ref15}.
+Não foram identificados valores sensíveis embutidos no código, o que demonstra uma boa segregação de segredos e práticas seguras de gestão de credenciais \cite{ref14, ref15}.
 
 \subsection{Conclusão}
 
 Embora nenhuma destas vulnerabilidades tenha sido identificada na aplicação analisada, a sua verificação foi essencial para garantir uma abordagem responsável, abrangente e conforme as normas internacionais de segurança.
 
-Os resultados reforçam que, mesmo em ambientes \textit{no-code} e com integração de IA, é possível seguir metodologias de análise de risco alinhadas com os princípios do OWASP Top 10 (2021) e do NIST Cybersecurity Framework (CSF) \cite{ref2}, \cite{ref4}.
+Os resultados reforçam que, mesmo em ambientes \textit{no-code} e com integração de IA, é possível seguir metodologias de análise de risco alinhadas com os princípios do OWASP Top 10 (2021) e do NIST Cybersecurity Framework (CSF) \cite{ref2, ref4}.
