--- a/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
+++ b/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
@@ -5,6 +5,7 @@ Nesta secção, descreve-se a arquitetura tecnológica do projeto e detalham-se 
 \subsection{Implementação das correções}
 
 \input{capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/correcao_reverse_tabnabbing}
+\input{capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/correcao_injecoes_inseguras_no_DOM}
 
 
 \subsection{Resultados Obtidos}
@@ -12,5 +13,6 @@ Nesta secção, descreve-se a arquitetura tecnológica do projeto e detalham-se 
 \subsubsection{Validação das Correções (Segundo Ciclo)}
 
 \input{capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/evidencia_reverse_tabnabbing}
+\input{capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/evidencia_injecoes_inseguras_no_DOM}
 
 
