--- a/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
+++ b/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
@@ -12,7 +12,7 @@ Nesta secção, descreve-se a arquitetura tecnológica do projeto e detalham-se 
 
 \subsection{Resultados Obtidos}
 
-\subsubsection{Validação das Correções (Segundo Ciclo)}
+\subsubsection*{Validação das Correções (Segundo Ciclo)}
 
 \input{capitulos/07_parte_pratica_PASTA/source_tabs_disabling_PASTA/evidencia_source_tabs_disabling}
 \input{capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/evidencia_reverse_tabnabbing}
