--- a/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
+++ b/relatorio-latex/capitulos/07_implementacao_correcoes_vulnerabilidades.tex
@@ -6,7 +6,7 @@ Nesta secção, descreve-se a arquitetura tecnológica do projeto e detalham-se 
 
 \input{capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/correcao_reverse_tabnabbing}
 \input{capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/correcao_injecoes_inseguras_no_DOM}
-
+\input{capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/correcao_reforco_da_CSP}
 
 \subsection{Resultados Obtidos}
 
@@ -14,5 +14,5 @@ Nesta secção, descreve-se a arquitetura tecnológica do projeto e detalham-se 
 
 \input{capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/evidencia_reverse_tabnabbing}
 \input{capitulos/07_parte_pratica_PASTA/7.2.2_Injecoes_inseguras_no_DOM/evidencia_injecoes_inseguras_no_DOM}
-
+\input{capitulos/07_parte_pratica_PASTA/7.2.3_Reforco_da_CSP/evidencia_reforco_da_CSP}
 
